enh+doc: docker-compose listener + converter

--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -1,14 +1,18 @@
 FROM nipy/heudiconv:latest
 
 RUN apt-get update -qq \
-    && apt-get install -y -q --no-install-recommends cron \
+    && apt-get install -y -qq --no-install-recommends cron \
     && apt-get clean
 
-COPY heudicron /etc/cron.d/heudicron
-COPY heudiconv.sh start-cron /
+RUN git config --global user.email "user@heudiconv" \
+    && git config --global user.name "heudiconv-erter"
 
-RUN chmod +x /heudiconv.sh /start-cron \
-    && chmod 0644 /etc/cron.d/heudicron \
-    && touch /var/log/cron.log
+COPY heudiconv.sh /
 
-ENTRYPOINT ["/start-cron"]
+# save copy of current PATH to be used in cron job (hacky)
+RUN echo ${PATH} > /opt/heudiconv.path
+
+RUN chmod +x /heudiconv.sh \
+    && (crontab -l; echo "* 4 * * * /heudiconv.sh > /proc/1/fd/1 2>/proc/1/fd/2") | crontab
+
+ENTRYPOINT cron -f
